--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,10 +37,10 @@ maingate = { git = "https://github.com/scroll-tech/halo2wrong", branch = "halo2-
 [patch."https://github.com/privacy-scaling-explorations/halo2curves.git"]
 halo2curves = { git = "https://github.com/scroll-tech/halo2curves.git", branch = "0.3.1-derive-serde" }
 
-[profile.test]
-opt-level = 3
-debug-assertions = true
+# [profile.test]
+# opt-level = 3
+# debug-assertions = true
 
-[profile.release]
-opt-level = 3
-debug-assertions = true
+# [profile.release]
+# opt-level = 3
+# debug-assertions = true
